SERVER-87987 Remove fields from computedMetaProjFields if they are not included in the project (#20048)

GitOrigin-RevId: 0aec4c87f78741015c26f86bde12e4ad88621a6a