src/mongo/db/exec/timeseries/bucket_unpacker.cpp
@@ -657,12 +657,17 @@ void BucketUnpacker::eraseMetaFromFieldSetAndDetermineIncludeMeta() {
     }
 }
 
-void BucketUnpacker::eraseExcludedComputedMetaProjFields() {
-    if (_spec.behavior() == BucketSpec::Behavior::kExclude) {
-        for (const auto& field : _spec.fieldSet()) {
-            _spec.eraseFromComputedMetaProjFields(field);
-        }
-    }
+void BucketUnpacker::eraseUnneededComputedMetaProjFields() {
+    //  If this is an inclusion spec and the current computed field is not part of in the include
+    //  fields, it means the computed field should not be available after the current unpack stage.
+    //  Similarly, for exclusion spec, if the current computed field is part of the exclude fields,
+    //  the computed fields should not be available after the current unpack stage. This can happen
+    //  if there was a $project stage after a $addFields stage.
+    bool removeIfInFieldSet = _spec.behavior() == BucketSpec::Behavior::kExclude;
+    auto conditionToErase = [&](const std::string& computedField) {
+        return _spec.fieldSet().contains(computedField) == removeIfInFieldSet;
+    };
+    _spec.eraseIfPredTrueFromComputedMetaProjFields(conditionToErase);
 }
 
 void BucketUnpacker::setBucketSpec(BucketSpec&& bucketSpec) {
@@ -670,7 +675,7 @@ void BucketUnpacker::setBucketSpec(BucketSpec&& bucketSpec) {
 
     eraseMetaFromFieldSetAndDetermineIncludeMeta();
     determineIncludeTimeField();
-    eraseExcludedComputedMetaProjFields();
+    eraseUnneededComputedMetaProjFields();
 
     _includeMinTimeAsMetadata = _spec.includeMinTimeAsMetadata;
     _includeMaxTimeAsMetadata = _spec.includeMaxTimeAsMetadata;
